<resources>
    <string name="app_name">TheMovieDB</string>
    <string name="dialog_title_choose_country">Select your country</string>
    <string name="tab_name_now_playing_movie">Now Playing</string>
    <string name="tab_name_upcoming_movie">Upcoming</string>

    <string name="label_cast">Cast</string>
    <string name="label_see_all">See All</string>
    <string name="label_information">Information</string>
    <string name="label_release_date">Release Date</string>
    <string name="label_prod_country">Production Country</string>
    <string name="label_prod_company">Production Company</string>
    <string name="label_keywords">Keyword</string>
</resources>
